test/corpus/assignment.txt
================================================================================
Assignment
================================================================================

a = 1
b = 2;
c = "a string"
d = [1 2; 3 4] * 2
[a b c d] = function
[a,b,c,d] = function

[a _ c d] = function
[a,b,_,d] = function

A(1) = B

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number))
  (assignment
    (identifier)
    (number))
  (assignment
    (identifier)
    (string))
  (assignment
    (identifier)
    (binary_operator
      (matrix_definition
        (row
          (number)
          (number))
        (row
          (number)
          (number)))
      (number)))
  (assignment
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (assignment
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (assignment
    (identifier)
    (ignored_argument)
    (identifier)
    (identifier)
    (identifier))
  (assignment
    (identifier)
    (identifier)
    (ignored_argument)
    (identifier)
    (identifier))
  (assignment
    (function_call
      (identifier)
      (func_call_paren)
      (number)
      (func_call_paren))
    (identifier)))
