test/corpus/call.txt
================================================================================
Function call
================================================================================

eye(1,2)
inv(A)
ans()

expm(eye(3,3)) * zeros(3,3)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (func_call_paren)
    (number)
    (number)
    (func_call_paren))
  (function_call
    (identifier)
    (func_call_paren)
    (identifier)
    (func_call_paren))
  (function_call
    (identifier)
    (func_call_paren)
    (func_call_paren))
  (binary_operator
    (function_call
      (identifier)
      (func_call_paren)
      (function_call
        (identifier)
        (func_call_paren)
        (number)
        (number)
        (func_call_paren))
      (func_call_paren))
    (function_call
      (identifier)
      (func_call_paren)
      (number)
      (number)
      (func_call_paren))))
