test/corpus/cell.txt
================================================================================
Cell: Simple
================================================================================

{1 2 3 4}
{1,2,3,4}
{'a' 'a'}

--------------------------------------------------------------------------------

(source_file
  (cell
    (row
      (number)
      (number)
      (number)
      (number)))
  (cell
    (row
      (number)
      (number)
      (number)
      (number)))
  (cell
    (row
      (string)
      (string))))

================================================================================
Cell: Multidimensional
================================================================================

{1 2; 3 4}
{{1 2} {3 4}; {5 6} {7}}

--------------------------------------------------------------------------------

(source_file
  (cell
    (row
      (number)
      (number))
    (row
      (number)
      (number)))
  (cell
    (row
      (cell
      (row
        (number)
        (number)))
      (cell
      (row
        (number)
        (number))))
    (row
      (cell
      (row
        (number)
        (number)))
      (cell
      (row
        (number))))))

================================================================================
Cell: Extra delimiters
================================================================================

// Scilab accepts as many ; as you wish.
{1,2,3,;;;1,2,3}
{1,2,3,


1,2,3}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (cell
    (row
      (number)
      (number)
      (number))
    (row
      (number)
      (number)
      (number)))
  (cell
    (row
      (number)
      (number)
      (number))
    (row
      (number)
      (number)
      (number))))
