test/corpus/comments.txt
================================================================================
Comment: End Of Line
================================================================================

1 // after a line comment, nothing else matters;// 'fda' ...
a = 1 // a comment

--------------------------------------------------------------------------------

(source_file
  (number)
  (comment)
  (assignment
    (identifier)
    (number))
  (comment))

================================================================================
Comment: Multiline
================================================================================

/* As this comment is quite long to be on many lines,
the symbols slash and star to start the comment
and star and slash to end the comment are used */

/*
A proper
  multiline
    // comment
*/

/*
// A proper
// multiline
// comment
*/

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment))

================================================================================
Comment: Group Of Comments As Single Comment
================================================================================

// An improper
// multiline
// comment
// grouped together

// again
        // but now
        // indented

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment))

================================================================================
Comment: Comment Before Statement
================================================================================

// do something
a = b
//
a(1)

--------------------------------------------------------------------------------

(source_file
  (comment)
  (assignment
    (identifier)
    (identifier))
  (comment)
  (function_call
    (identifier)
    (function_arguments
      (number))))

================================================================================
Comment: Line Continuation
================================================================================

A = 1 + ... // a comment
    2

A = [a b; ... // not really necessary
     c d]

A = "Some " + ... // multiline concatenation
    "string"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (binary_operator
      (number)
      (line_continuation
        (comment))
      (number)))
  (assignment
    (identifier)
    (matrix_definition
      (row
        (identifier)
        (identifier))
      (line_continuation
        (comment))
      (row
        (identifier)
        (identifier))))
  (assignment
    (identifier)
    (binary_operator
      (string)
      (line_continuation
        (comment))
      (string))))
