test/corpus/for.txt
================================================================================
For Statement: Simple
================================================================================

for a = 1:10
    1
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (block
      (number))))

================================================================================
For Statement: Nested
================================================================================

for R = 1:N
    for C = 1:N
        continue
    end
    break
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (iterator
      (identifier)
      (range
        (number)
        (identifier)))
    (block
      (for_statement
        (iterator
          (identifier)
          (range
            (number)
            (identifier)))
        (block
         (continue_statement)))
      (break_statement))))

================================================================================
For Statement: Single Line
================================================================================

for S = 1.0: -0.1: 0.0, do_some_task(S), end

for E = eye(N), do_some_task(E), end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (iterator
      (identifier)
      (range
        (number)
        (unary_operator
          (number))
        (number)))
    (block
      (function_call
        (identifier)
        (identifier))))
  (for_statement
    (iterator
      (identifier)
      (function_call
        (identifier)
        (identifier)))
    (block
      (function_call
        (identifier)
        (identifier)))))
