test/corpus/function.txt
================================================================================
Function Declaration: No Args, No Output
================================================================================

function a
    1
end

function a()
    1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (block
      (number)))
  (function_definition
    (identifier)
    (block
      (number))))

================================================================================
Function Declaration: Args, No Output
================================================================================

function a(a)
    1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (arguments
      (identifier))
    (block
      (number))))

================================================================================
Function Declaration: No Args, Simple Output
================================================================================

function a = b
    1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_output
      (identifier))
    (identifier)
    (block
      (number))))

================================================================================
Function Declaration: No Args, Multiple Outputs
================================================================================

function [a,b] = c
    1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_output
      (multioutput_variable
        (identifier)
        (identifier)))
    (identifier)
    (block
      (number))))

================================================================================
Function Declaration: Args, Multiple Outputs
================================================================================

function [ a , b ] = c(a, b)
    1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_output
      (multioutput_variable
        (identifier)
        (identifier)))
    (identifier)
    (arguments
      (identifier)
      (identifier))
    (block
      (number))))

================================================================================
Function Declaration: After Script
================================================================================

1 + a()

function a
    2
end

--------------------------------------------------------------------------------

(source_file
  (binary_operator
    (number)
    (function_call
      (identifier)))
  (function_definition
    (identifier)
    (block
      (number))))

================================================================================
Function Declaration: Inline Declaration
================================================================================

function y=sq(x),y=x^2,endfunction

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_output
      (identifier))
    (identifier)
    (arguments
      (identifier))
    (block
      (assignment
        (identifier)
        (binary_operator
          (identifier)
          (number))))))

================================================================================
Function Declaration: Empty Body
================================================================================

function A
end

function B
    // just a coment
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier))
  (function_definition
    (identifier)
    (comment)))


================================================================================
Function Declaration: Nested Functions
================================================================================

function A
    x = 1
    B()
    function B
        x = x + 1
    end
    x = x + 1
end

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (block
      (assignment
        (identifier)
        (number))
      (function_call
        (identifier))
      (function_definition
        (identifier)
        (block
          (assignment
            (identifier)
            (binary_operator
              (identifier)
              (number)))))
      (assignment
        (identifier)
        (binary_operator
          (identifier)
          (number))))))

================================================================================
Function Declaration: Empty Function Outputs
================================================================================

function []=message(str)
    printf(str+"\n")
endfunction

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (function_output
      (multioutput_variable))
    (identifier)
    (arguments
      (identifier))
    (block
      (function_call
        (identifier)
        (arguments
          (binary_operator
            (identifier)
            (string
              (special_escape_sequence))))))))
