test/corpus/indexing.txt
================================================================================
Matrix Indexing: Simple
================================================================================

A(1)
A(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (number))
  (function_call
    (identifier)
    (number)
    (number)))

================================================================================
Matrix Indexing: Spread Operator
================================================================================

A(:)
A(1:2, :)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (ranging_operator))
  (function_call
    (identifier)
    (range
      (number)
      (number))
    (ranging_operator)))
